--- a/src/pages/components/data-table/style.mdx
+++ b/src/pages/components/data-table/style.mdx
@@ -43,8 +43,6 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 |                  | text color       | `$text-secondary: inline theme` |
 
 ### Interactive states
-Refer to the [ghost button](https://carbondesignsystem.com/components/button/style#ghost-button) for button
-styling in the batch action bar.
 
 | Element               | Property         | Color token             |
 | --------------------- | ---------------- | ----------------------- |
@@ -54,6 +52,8 @@ styling in the batch action bar.
 | Row: selected         | background-color | `$layer-selected`       |
 |                       | text color       | `$text-primary`         |
 | Row: selected + hover | background-color | `$layer-selected-hover` |
+
+For the batch action bar, refer to the [ghost button](https://carbondesignsystem.com/components/button/style#ghost-button) styling.
 
 <Row>
 <Column colLg={8}>
