update: consistent use of dashes

--- a/src/pages/components/data-table/style.mdx
+++ b/src/pages/components/data-table/style.mdx
@@ -11,12 +11,12 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | Element       | Property         | Color token        |
 | ------------- | ---------------- | ------------------ |
 | Table header  | background-color | `$layer`           |
-| Title         | text color       | `$text-primary`    |
-| Description   | text color       | `$text-secondary`  |
+| Title         | text-color       | `$text-primary`    |
+| Description   | text-color       | `$text-secondary`  |
 | Column header | background-color | `$layer-accent`    |
-|               | text color       | `$text-primary`    |
+|               | text-color       | `$text-primary`    |
 | Row           | background-color | `$layer`           |
-|               | text color       | `$text-secondary`  |
+|               | text-color       | `$text-secondary`  |
 |               | border-bottom    | `$border-subtle`   |
 
 <Row>
@@ -33,27 +33,29 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | ---------------- | ---------------- | ------------------------------- |
 | Zebra row        | background-color | `$layer-accent`                 |
 | Expanded row     | background-color | `$layer`                        |
-| Sort             | svg              | `$icon-primary`                 |
-| Chevron          | svg              | `$icon-primary`                 |
-| Overflow         | svg              | `$icon-primary`                 |
+| Sort icon        | svg              | `$icon-primary`                 |
+| Chevron icon     | svg              | `$icon-primary`                 |
+| Overflow icon    | svg              | `$icon-primary`                 |
 | Batch action bar | background-color | `$background-brand`             |
-|                  | text color       | `$text-on-color`                |
+|                  | text-color       | `$text-on-color`                |
 |                  | svg              | `icon-on-color`                 |
 | Overflow menu    | background-color | `$layer: inline theme`          |
-|                  | text color       | `$text-secondary: inline theme` |
+|                  | text-color       | `$text-secondary: inline theme` |
 
 ### Interactive states
 
 | Element               | Property         | Color token             |
 | --------------------- | ---------------- | ----------------------- |
 | Row: hover            | background-color | `$layer-hover`          |
-|                       | text color       | `$text-primary`         |
+|                       | text-color       | `$text-primary`         |
 | Row: focus            | border           | `$focus`                |
 | Row: selected         | background-color | `$layer-selected`       |
-|                       | text color       | `$text-primary`         |
+|                       | text-color       | `$text-primary`         |
 | Row: selected + hover | background-color | `$layer-selected-hover` |
 
 For the batch action bar, refer to the [ghost button](https://carbondesignsystem.com/components/button/style#ghost-button) styling.
+
+<br>
 
 <Row>
 <Column colLg={8}>
