More-tweaks-and-improvements

--- a/src/pages/community/patterns/edit-pattern/index.mdx
+++ b/src/pages/community/patterns/edit-pattern/index.mdx
@@ -4,15 +4,15 @@ title: Edit
 
 #### Maintainers:
 
-Carbon for Cloud & Cognitive Design system adoption guild
+Carbon for Cloud & Cognitive Design system adoption guild -
+[#ccs-pal](https://ibm-casdesign.slack.com/archives/CQGR0HC05) on Slack
 
 ## Overview
 
 To edit is to change values or data. Users often need to edit different types of
-assets, and they can have simple or complex requirements.  
-This pattern focuses on how to place the user in a flow when there's a need for
-editing an existing asset.  
-Choose the flow depending on the number, impact and intent of edits made.
+assets, and they can have simple or complex requirements. This pattern focuses
+on how to place the user in a flow when there's a need for editing an existing
+asset.
 
 <Row className="image-card-group">
 
@@ -30,13 +30,13 @@ href="#inline-edit">
 </ImageCard>
 
 <ImageCard
-sub-title="Wide tearsheet edit"
+sub-title="Narrow tearsheet edit"
 sub-titleColor="dark"
 aspectRatio="4:3"
 hoverColor="dark"
-href="#wide-tearsheet-edit">
+href="#narrow-tearsheet">
 
-![Wide tearsheet edit](images/Overview-WideTearsheet.png)
+![Narrow Tearsheet edit](images/Overview-NarrowTearsheet.png)
 
 </ImageCard>
 
@@ -56,13 +56,13 @@ href="#modal-edit">
 </ImageCard>
 
 <ImageCard
-sub-title="Full page edit"
+sub-title="Wide tearsheet edit"
 sub-titleColor="dark"
 aspectRatio="4:3"
 hoverColor="dark"
-href="#full-page-edit">
+href="#wide-tearsheet-edit">
 
-![Full page edit](images/Overview-FullPage.png)
+![Wide tearsheet edit](images/Overview-WideTearsheet.png)
 
 </ImageCard>
 
@@ -81,18 +81,14 @@ href="#side-panel-edit">
 
 </ImageCard>
 
-</Column>
-
-<Column colMd={3} colLg={3} noGutterSm>
-
 <ImageCard
-sub-title="Narrow tearsheet edit"
+sub-title="Full page edit"
 sub-titleColor="dark"
 aspectRatio="4:3"
 hoverColor="dark"
-href="#narrow-tearsheet">
+href="#full-page-edit">
 
-![Narrow Tearsheet edit](images/Overview-NarrowTearsheet.png)
+![Full page edit](images/Overview-FullPage.png)
 
 </ImageCard>
 
@@ -100,87 +96,14 @@ href="#narrow-tearsheet">
 
 </Row>
 
-Some components have their own distinct edit behaviours. We also provide
-guidance on these.
+#### Deciding what to use
 
-<Row className="image-card-group">
-
-<Column colMd={3} colLg={3} noGutterSm>
-
-<ImageCard 
-sub-title="Component: Dashboard edit"
-sub-titleColor="dark"
-aspectRatio="4:3"
-hoverColor="dark"
-href="#dashboards">
-
-![Square](images/table_header.png)
-
-</ImageCard>
-
-<ImageCard
-sub-title="Component: Property editor"
-sub-titleColor="dark"
-aspectRatio="4:3"
-hoverColor="dark"
-href="#property-editors">
-
-![Square](images/expandable_rows.png)
-
-</ImageCard>
-
-</Column>
-
-<Column colMd={3} colLg={3} noGutterSm>
-
-<ImageCard 
-sub-title="Component: Card edit"
-sub-titleColor="dark"
-aspectRatio="4:3"
-hoverColor="dark"
-href="#cards">
-
-![Square](images/table_actions.png)
-
-</ImageCard>
-
-</Column>
-
-<Column colMd={3} colLg={3} noGutterSm>
-
-<ImageCard
-sub-title="Component: Data table edit"
-sub-titleColor="dark"
-aspectRatio="4:3"
-hoverColor="dark"
-href="#data-tables">
-
-![box](images/persistent_VS_hover.png)
-
-</ImageCard>
-
-</Column>
-
-<Column colMd={3} colLg={3} noGutterSm>
-
-<ImageCard
-sub-title="Component: Text editor"
-sub-titleColor="dark"
-aspectRatio="4:3"
-hoverColor="dark"
-href="#text-editors">
-
-![Square](images/toolbar_batch_actions.png)
-
-</ImageCard>
-
-</Column>
-
-</Row>
+Choose the flow depending on the number, impact and intent of edits made.  
+Refer to [Behaviors](#behaviors) and [Best practices](#best-practices).
 
 | Type                                            | Usage                                                                                                                             | Context                                          |
 | ----------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------ |
-| [Inline edit](#inline-edit)                     | Use with quick, simple edits of disparate fields.                                                                                 | On-page content can be seen and interacted with. |
+| [Inline edit](#inline-edit)                     | Use with quick, simple edits of individual fields.                                                                                | On-page content can be seen and interacted with. |
 | [Modal edit](#modal-edit)                       | Use with simple or transitional edits of no more than a couple of form fields.                                                    | On-page content is obscured.                     |
 | [Edit in side panel](#side-panel-edit)          | Use with medium complexity edits if the user needs page context.                                                                  | On-page content can be seen.                     |
 | [Edit in tearsheets](#tearsheet-edit)           | Use with medium to complex edits.                                                                                                 | On-page content is obscured.                     |
@@ -309,6 +232,79 @@ Do not use this pattern when:
 
 ## Other edit behaviors
 
+Some components have their own distinct edit behaviours.
+
+<Row className="image-card-group">
+
+<Column colMd={3} colLg={3} noGutterSm>
+
+<ImageCard 
+sub-title="Component: Dashboard edit"
+sub-titleColor="dark"
+aspectRatio="4:3"
+hoverColor="dark"
+href="#dashboards">
+
+![Square](images/Overview-Dashboard.png)
+
+</ImageCard>
+
+<ImageCard
+sub-title="Component: Text editor"
+sub-titleColor="dark"
+aspectRatio="4:3"
+hoverColor="dark"
+href="#text-editors">
+
+![Square](images/Overview-TextEditor.png)
+
+</ImageCard>
+
+</Column>
+
+<Column colMd={3} colLg={3} noGutterSm>
+
+<ImageCard 
+sub-title="Component: Card edit"
+sub-titleColor="dark"
+aspectRatio="4:3"
+hoverColor="dark"
+href="#cards">
+
+![Square](images/Overview-Card.png)
+
+</ImageCard>
+
+<ImageCard
+sub-title="Component: Property editor"
+sub-titleColor="dark"
+aspectRatio="4:3"
+hoverColor="dark"
+href="#property-editors">
+
+![Square](images/Overview-PropertyEditor.png)
+
+</ImageCard>
+
+</Column>
+
+<Column colMd={3} colLg={3} noGutterSm>
+
+<ImageCard
+sub-title="Component: Data table edit"
+sub-titleColor="dark"
+aspectRatio="4:3"
+hoverColor="dark"
+href="#data-tables">
+
+![box](images/Overview-DataTable.png)
+
+</ImageCard>
+
+</Column>
+
+</Row>
+
 ### Dashboards
 
 ### Cards
@@ -340,6 +336,88 @@ and needed information.
 ### Property editors
 
 ## Optional extras
+
+<Row className="image-card-group">
+
+<Column colMd={3} colLg={3} noGutterSm>
+
+<ImageCard 
+sub-title="Summary of changes"
+sub-titleColor="dark"
+aspectRatio="4:3"
+hoverColor="dark"
+href="#summary-of-changes">
+
+![Square](images/Overview-PropertyEditor.png)
+
+</ImageCard>
+
+<ImageCard
+sub-title="Undo"
+sub-titleColor="dark"
+aspectRatio="4:3"
+hoverColor="dark"
+href="#undo">
+
+![Square](images/Overview-PropertyEditor.png)
+
+</ImageCard>
+
+</Column>
+
+<Column colMd={3} colLg={3} noGutterSm>
+
+<ImageCard
+sub-title="Preview of changes"
+sub-titleColor="dark"
+aspectRatio="4:3"
+hoverColor="dark"
+href="#preview-of-changes">
+
+![Square](images/Overview-PropertyEditor.png)
+
+</ImageCard>
+
+<ImageCard
+sub-title="Success messages"
+sub-titleColor="dark"
+aspectRatio="4:3"
+hoverColor="dark"
+href="#success-messages">
+
+![box](images/Overview-PropertyEditor.png)
+
+</ImageCard>
+
+</Column>
+
+<Column colMd={3} colLg={3} noGutterSm>
+
+<ImageCard 
+sub-title="Warnings"
+sub-titleColor="dark"
+aspectRatio="4:3"
+hoverColor="dark"
+href="#warnings">
+
+![Square](images/Overview-PropertyEditor.png)
+
+</ImageCard>
+
+<ImageCard
+sub-title="Errors"
+sub-titleColor="dark"
+aspectRatio="4:3"
+hoverColor="dark"
+href="#errors">
+
+![box](images/Overview-PropertyEditor.png)
+
+</ImageCard>
+
+</Column>
+
+</Row>
 
 ### Summary of changes
 
@@ -429,7 +507,7 @@ In the case that the "save changes" operation fails:
 
 ## Designing with edit flows
 
-### Behaviors generic to all variants of edit
+### Behaviors
 
 #### Edit mode
 
@@ -485,42 +563,48 @@ Edits that have a wider impact on the system or user experience should use
 ### Best practices
 
 **Do: Title pages with "Edit (object)" so that users know what their actions
-are.** Explicit IA lets us use succinct button terms such as "Save" or "Cancel".
+are.**  
+Explicit IA lets us use succinct button terms such as "Save" or "Cancel".
 
-**Do: Use the same behavior as when the resource is created.** Where the number
-of editable values is significantly smaller or larger than during creation, or
-the context of current settings is required, use a different behavior to when
-the resource is created.
+**Do: Use the same behavior as when the resource is created.**  
+Where the number of editable values is significantly smaller or larger than
+during creation, or the context of current settings is required, use a different
+behavior to when the resource is created.
 
 **Do: Use a variation that is best for the number of editable (or likely to be
-edited) values.** Some variations (modal, inline editing) are best used when few
-values are editable. Consider how many values a user is likely to edit in each
-interaction.
+edited) values.**  
+Some variations (modal, inline editing) are best used when few values are
+editable. Consider how many values a user is likely to edit in each interaction.
 
 **Do: Provide the data in a read-only format if the user's intent is often to
-view rather than edit.** Consider using an "edit" button to reveal the edit
-form. See [edit mode](#Edit mode).
+view rather than edit.**  
+Consider using an "edit" button to reveal the edit form. See
+[edit mode](#edit-mode).
 
-**Do: Provide users feedback** Alert users when saving changes fails. If
-possible retain their work and allow the user to try saving again.
+**Do: Provide users feedback**  
+Alert users when saving changes fails. If possible retain their work and allow
+the user to try saving again.
 
 **Do: Provide any context needed for a user to make edits to a value.** 
 Consider side panel or inline editing so that the user can continue to see the
 page context.
 
 **Do: Inform users of the consequence of their edits, whether to other editable
-values or to the system as a whole.** Use steps, validation and progressive
-disclosure to help users avoid error. When editing a resource affects system
-availability, use warnings, messages and notifications if necessary to inform
-the user.
+values or to the system as a whole.**  
+Use steps, validation and progressive disclosure to help users avoid error. When
+editing a resource affects system availability, use warnings, messages and
+notifications if necessary to inform the user.
 
 **Do: Default users to the non-stepped view of a multiple-step flow when they
 edit unless edits can only be made sequentially.**
 
 ## Related use cases
 
-See Add See Create There isn't one yet, but consider "Duplicate" followed by
-Edit, as well as "Save as". Versioning doesn't exist yet, but probably should.
+See Add  
+See Create  
+There isn't one yet, but consider "Duplicate" followed by Edit, as well as "Save
+as".  
+Versioning doesn't exist yet, but probably should.
 
 ## Terminology
 
